--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
+    "csv-parser": "^2.3.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "request-promise-native": "^1.0.7",
+    "unzipper": "^0.10.1"
   }
 }
